--- a/opentelemetry/exporter-logs-otlp-http/tsconfig.esm.json
+++ b/opentelemetry/exporter-logs-otlp-http/tsconfig.esm.json
@@ -1,34 +1,10 @@
 {
-  "extends": "../../../tsconfig.base.esm.json",
+  "extends": "../../tsconfig.base.esm.json",
   "compilerOptions": {
     "outDir": "build/esm",
     "rootDir": "src",
     "tsBuildInfoFile": "build/esm/tsconfig.esm.tsbuildinfo"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "../../../api"
-    },
-    {
-      "path": "../../../packages/opentelemetry-core"
-    },
-    {
-      "path": "../../../packages/opentelemetry-resources"
-    },
-    {
-      "path": "../api-logs"
-    },
-    {
-      "path": "../otlp-exporter-base"
-    },
-    {
-      "path": "../otlp-transformer"
-    },
-    {
-      "path": "../sdk-logs"
-    }
-  ]
+  "include": ["src/**/*.ts"],
+  "references": []
 }
