--- a/opentelemetry/exporter-logs-otlp-http/tsconfig.json
+++ b/opentelemetry/exporter-logs-otlp-http/tsconfig.json
@@ -1,34 +1,9 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "../../../api"
-    },
-    {
-      "path": "../../../packages/opentelemetry-core"
-    },
-    {
-      "path": "../../../packages/opentelemetry-resources"
-    },
-    {
-      "path": "../api-logs"
-    },
-    {
-      "path": "../otlp-exporter-base"
-    },
-    {
-      "path": "../otlp-transformer"
-    },
-    {
-      "path": "../sdk-logs"
-    }
-  ]
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "references": []
 }
