--- a/opentelemetry/otlp-exporter-base/tsconfig.esnext.json
+++ b/opentelemetry/otlp-exporter-base/tsconfig.esnext.json
@@ -1,19 +1,10 @@
 {
-  "extends": "../../../tsconfig.base.esnext.json",
+  "extends": "../../tsconfig.base.esnext.json",
   "compilerOptions": {
     "outDir": "build/esnext",
     "rootDir": "src",
     "tsBuildInfoFile": "build/esnext/tsconfig.esnext.tsbuildinfo"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "../../../api"
-    },
-    {
-      "path": "../../../packages/opentelemetry-core"
-    }
-  ]
+  "include": ["src/**/*.ts"],
+  "references": []
 }
