--- a/opentelemetry/otlp-exporter-base/tsconfig.json
+++ b/opentelemetry/otlp-exporter-base/tsconfig.json
@@ -1,20 +1,10 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "."
   },
   "files": [],
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ],
-  "references": [
-    {
-      "path": "../../../api"
-    },
-    {
-      "path": "../../../packages/opentelemetry-core"
-    }
-  ]
+  "include": ["src/**/*.ts", "test/**/*.ts"],
+  "references": []
 }
